# modbus-firewall

./: README.md
avr/: .gitignore  Makefile  main.c
avr/firewall/: coils.c  discrete.c  firewall.c  firewall.h  holdings.c  inputs.c
avr/firewall/include/: mbfirewall.h
avr/modbus/: mb_f.c
avr/modbus/include/: mb_f.h  mbconfig.h  mbport.h
avr/modbus/rtu/: mbrtu.c  mbrtu.h  mbrtu_f.c
avr/port/: portevent_f.c  portserial.c  portserial_f.c  porttimer.c  porttimer_f.c
esp32/: .clang-format  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32/components/modifiedmodbus/: CMakeLists.txt
esp32/components/modifiedmodbus/common/: esp_modbus_callbacks.h  esp_modbus_firewall.c  esp_modbus_master.c  esp_modbus_slave.c  mbc_firewall.h  mbc_master.h  mbc_slave.h
esp32/components/modifiedmodbus/common/include/: esp_modbus_common.h  esp_modbus_firewall.h  esp_modbus_master.h  esp_modbus_slave.h  mbcontroller.h
esp32/components/modifiedmodbus/modbus/: mb.c  mb_f.c  mb_m.c
esp32/components/modifiedmodbus/modbus/ascii/: mbascii.c  mbascii.h
esp32/components/modifiedmodbus/modbus/functions/: mbfunccoils.c  (+9 more)
esp32/components/modifiedmodbus/port/: port.c  port.h  portevent.c  portevent_f.c  portevent_m.c  portother.c  portother_m.c  portserial.c  portserial_f.c  portserial_m.c  porttimer.c  porttimer_f.c  porttimer_m.c
esp32/main/: CMakeLists.txt  Kconfig.projbuild  firewall.c  firewall.h  generated.c  main.c
esp32/main/firewall/: coils.c  discrete.c  firewall.c  firewall.h  generated.c  holdings.c  inputs.c
esp32/main/firewall/include/: mbfirewall.h
(+26 files in other folders)
