idf_component_register(
    SRCS
        "main.c"
        "firewall/generated.c"
        "firewall/firewall.c"
        "firewall/coils.c"
        "firewall/discrete.c"
        "firewall/inputs.c"
        "firewall/holdings.c"
    INCLUDE_DIRS
        "firewall/include"
        ${CMAKE_CURRENT_LIST_DIR}
        $ENV{IDF_PATH}/components
    REQUIRES
        modifiedmodbus
)